--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -48,13 +48,13 @@
                             <li class="medio-de-contacto">
                                 <img src="../Imagenes/Iconos/phone.svg">
                                 <p>
-                                    +54 11 3245-11982
+                                    +54 11 6110-6034
                                 </p>
                             </li>
                             <li class="medio-de-contacto">
                                 <img src="../Imagenes/Iconos/mail.svg">
                                 <p>
-                                    contacto@solaris.com.ar
+                                    paginasestaticas@gmail.com
                                 </p>
                             </li>
                         </ul>
@@ -84,7 +84,7 @@
                                 <textarea name="mensaje" placeholder="Escribí tu mensaje..."></textarea>
                             </div>
                             <div id="div-contact-form-boton">
-                                <button type="submit" class="call-to-action-dark">Enviar mensaje</button>
+                                <button type="submit" class="call-to-action">Enviar mensaje</button>
                             </div>
                         </form>    
                     </div> 
