--- a/Paginas/faq.html
+++ b/Paginas/faq.html
@@ -45,7 +45,7 @@
                         <div class="small-title">Preguntas Frequentes</div>
                         <h2>Preguntas Frequentes</h2>
                         <p>
-                            Visitá nuestra página de preguntas frecuentes para encontrar respuestas a todo lo que quieras saber sobre lo que hacemos, lo que cobramos, nuestro proceso y cómo funciona todo.
+                            Encontrá respuestas a todas tus consultas sobre nuestros servicios. Toda la información que necesitás está disponible en esta sección.
                         </p>
                     </div>
                     <ul id="ul-preguntas-frequentes">
