--- a/Paginas/nosotros.html
+++ b/Paginas/nosotros.html
@@ -46,16 +46,16 @@
                         <div class="small-title">Páginas Estáticas</div>
                         <h2>Creamos sitios web con propósito e intención.</h2>
                         <p>
-                            En Páginas Estáticas, nos dedicamos a ayudar a pequeños y medianos emprendimientos a dar sus primeros pasos en el mundo digital con soluciones web prácticas, modernas y accesibles. Sabemos que muchos negocios tienen sueños grandes, pero presupuestos ajustados, por eso nos especializamos en crear páginas web que no solo sean lindas y funcionales, sino también económicas y fáciles de manejar.
+                            En Páginas Estáticas, nos dedicamos a ayudar a pequeños y medianos emprendimientos a dar sus primeros pasos en el mundo digital con soluciones web prácticas, modernas y accesibles. Sabemos que muchos negocios tienen sueños grandes, pero presupuestos ajustados, Por eso, nos enfocamos en desarrollar páginas web que no solo sean visualmente atractivas y funcionales, sino también económicas y sencillas de gestionar, adaptándonos a las necesidades reales de cada cliente.
                         </p>
                         <p>
-                            Fundada en 2023 por Felipe Ortigoza, un apasionado por la tecnología y el emprendimiento, nuestra empresa nació con la idea de apoyar a los negocios locales a crecer y conectarse con más clientes. Entendemos los desafíos que enfrentan los emprendedores, y por eso ofrecemos un servicio cercano, personalizado y enfocado en resultados reales.
+                            Fundada en 2025 por Felipe Ortigoza, un apasionado por la tecnología y el emprendimiento, nuestra empresa nació con la idea de apoyar a los negocios locales a crecer y conectarse con más clientes. Entendemos los desafíos que enfrentan los emprendedores, y por eso ofrecemos un servicio cercano, personalizado y enfocado en resultados reales.
                         </p>
                         <p>
-                            En Páginas Estáticas, creemos que una página web no tiene que ser complicada ni cara para ser efectiva. Trabajamos con vos para entender tus necesidades y armar una plataforma que refleje la esencia de tu negocio, te ayude a destacarte en línea y atraiga a más clientes. Ya sea que estés arrancando o buscando renovar tu presencia digital, estamos acá para hacerlo simple, rápido y sin vueltas.
+                            En Páginas Estáticas, estamos convencidos de que una página web efectiva no necesita ser compleja ni costosa. Trabajamos en estrecha colaboración con nuestros clientes para comprender sus necesidades y desarrollar una página web que capture la esencia de su negocio, potencie su visibilidad en línea y atraiga a más clientes. Ya sea que estés comenzando tu proyecto o buscando renovar tu presencia digital, nuestro enfoque se centra en ofrecer soluciones simples, rápidas y directas, sin complicaciones innecesarias.
                         </p>
                         <p>
-                            Nuestro compromiso es acompañarte en cada paso, ofreciendo un servicio transparente, eficiente y adaptado a tus objetivos. Porque en Páginas Estáticas, no solo armamos páginas web, creamos oportunidades para que tu negocio crezca.
+                            Nuestro compromiso es acompañarte en cada paso, ofreciendo un servicio transparente, eficiente y adaptado a tus objetivos. Porque en Páginas Estáticas, no solo escribimos páginas web, creamos oportunidades para que tu negocio crezca.
                         </p>
                     </div>
                 </div>
