--- a/index.html
+++ b/index.html
@@ -342,6 +342,169 @@
                     </div>
                 </div>
             </section>
+            <section id="section-paquetes">
+                <div class="common-padding">
+                    <div class="text-container">
+                        <span class="small-title">Nuestras tarifas</span>
+                        <h2>Diferentes alternativas para impulsar tu emprendimiento</h2>
+                    </div>
+                    <ul class="ul-paquetes">
+                        <li class="li-paquete">
+                            <span class="titulo-paquete">Sitio de página única</span>
+                            <ul>
+                                <li>
+                                    Diseño y desarrollo
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                        <path
+                                            d="M10.5858 13.4142L7.75735 10.5858L6.34314 12L10.5858 16.2427L17.6568 9.1716L16.2426 7.75739L10.5858 13.4142Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </li>
+                                <li>
+                                    Diseño One-Page
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                        <path
+                                            d="M10.5858 13.4142L7.75735 10.5858L6.34314 12L10.5858 16.2427L17.6568 9.1716L16.2426 7.75739L10.5858 13.4142Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </li>
+                                <li>
+                                    Incluye Lanzamiento
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                        <path
+                                            d="M10.5858 13.4142L7.75735 10.5858L6.34314 12L10.5858 16.2427L17.6568 9.1716L16.2426 7.75739L10.5858 13.4142Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </li>
+                                <li>
+                                    Integración con Google Maps
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                        <path
+                                            d="M10.5858 13.4142L7.75735 10.5858L6.34314 12L10.5858 16.2427L17.6568 9.1716L16.2426 7.75739L10.5858 13.4142Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </li>
+                            </ul>
+                            <span class="paquete-precio">$200,000</span>
+                            <button class="call-to-action-dark">
+                                <a href="Paginas/contacto.html">Empezar</a>
+                            </button>
+                        </li>
+                        <li id="paquete-destacado" class="li-paquete">
+                            <span class="titulo-paquete">Sitio Estándar</span>
+                            <ul>
+                                <li>
+                                    Diseño y desarrollo
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                        <path
+                                            d="M10.5858 13.4142L7.75735 10.5858L6.34314 12L10.5858 16.2427L17.6568 9.1716L16.2426 7.75739L10.5858 13.4142Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </li>
+                                <li>
+                                    Diseño estandar de 5 páginas
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                        <path
+                                            d="M10.5858 13.4142L7.75735 10.5858L6.34314 12L10.5858 16.2427L17.6568 9.1716L16.2426 7.75739L10.5858 13.4142Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </li>
+                                <li>
+                                    $30,000 por página extra
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                        <path
+                                            d="M10.5858 13.4142L7.75735 10.5858L6.34314 12L10.5858 16.2427L17.6568 9.1716L16.2426 7.75739L10.5858 13.4142Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </li>
+                                <li>
+                                    Incluye Lanzamiento
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                        <path
+                                            d="M10.5858 13.4142L7.75735 10.5858L6.34314 12L10.5858 16.2427L17.6568 9.1716L16.2426 7.75739L10.5858 13.4142Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </li>
+                                <li>
+                                    Integración con Google Maps
+                                    <svg
+                                        width="24"
+                                        height="24"
+                                        viewBox="0 0 24 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                        <path
+                                            d="M10.5858 13.4142L7.75735 10.5858L6.34314 12L10.5858 16.2427L17.6568 9.1716L16.2426 7.75739L10.5858 13.4142Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </li>
+                            </ul>
+                            <span class="paquete-precio">$300,000</span>
+                            <button class="call-to-action">
+                                <a href="Paginas/contacto.html">Empezar</a>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </section>
             <section id="section-contacto">
                 <div class="common-padding">
                     <h2>¿Listo para obtener la página que siempre quisiste para tu negocio?</h2>
