--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Páginas Estáticas">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="Imagenes/Logo/icon-color.ico" type="image/x-icon">
     </head>
     <body>
         <header>
@@ -305,7 +306,7 @@
                                     </p>
                                 </div>
                                 <button class="call-to-action-dark">
-                                    <a href="#">
+                                    <a href="https://paginas-estaticas.github.io/buenaburger.com.ar">
                                         Explorar página
                                     </a>
                                 </button>
@@ -319,7 +320,7 @@
                                     </p>
                                 </div>
                                 <button class="call-to-action-dark">
-                                    <a href="#">
+                                    <a href="https://paginas-estaticas.github.io/solaris.com.ar">
                                         Explorar página
                                     </a>
                                 </button>
@@ -333,7 +334,7 @@
                                     </p>
                                 </div>
                                 <button class="call-to-action-dark">
-                                    <a href="#">
+                                    <a href="https://paginas-estaticas.github.io/gutierrez-y-asoc.com.ar">
                                         Explorar página
                                     </a>
                                 </button>
