--- a/Paginas/nosotros.html
+++ b/Paginas/nosotros.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Páginas Estáticas">
         <link rel="stylesheet" href="../style.css">
+        <link rel="icon" href="../Imagenes/Logo/icon-color.ico" type="image/x-icon">
     </head>
     <body>
         <header>
